@@ -188,14 +188,21 @@ separated by |</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="1" column="1">
+         <widget class="HistoryCheck" name="csvskipwhitespacecheck">
+          <property name="text">
+           <string>Skip initial white space</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
          <widget class="QLabel" name="label_9">
           <property name="text">
            <string>Text</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
+        <item row="2" column="1">
          <widget class="HistoryCombo" name="csvtextdelimitercombo">
           <property name="toolTip">
            <string>Character to delimit text, usually a quote (&quot;).</string>
